# key_remap

./: .gitignore  README.md  key_remap.py  pyproject.toml
.github/workflows/: release-executable.yml
src/key_remap/: cli.py  gui.py
src/key_remap/backend/: __init__.py  config_manager.py  remap.py
src/key_remap/frontend/: config_window.py  systray_icon.py  ui.py  utils.py
src/key_remap/frontend/detector/: __init__.py  activator.py  detector.py  window.py
src/key_remap/utils/: cli.py  console.py  input.py
